<resources>
    <string name="app_name">Task</string>

    <!-- Auth / Login -->
    <string name="text_button_title">Login</string>
    <string name="text_welcome">Olá! Que bom ter você aqui!</string>
    <string name="text_button_loading_title">Aguarde um momento, por favor…</string>
    <string name="hint_email">seuemail@email.com</string>
    <string name="text_email">E-mail</string>
    <string name="text_senha">Senha</string>
    <!-- Auth / Register -->
    <string name="text_create_account">Criar conta</string>
    <string name="text_welcome_create_account">Criar uma conta</string>
    <!-- Auth / Recover Account -->
    <string name="text_recover_account">Recuperar conta</string>
    <string name="btn_recover_account">Enviar</string>
    <string name="hint_password">********</string>
    <string name="message_send_link_with_email">Informe um e-mail válido para receber um link de alteração de senha.</string>
    <!-- Tasks -->
    <string name="tab_todo">A Fazer</string>
    <string name="tab_doing">Fazendo</string>
    <string name="tab_done">Feitas</string>
    <string name="text_progress_bar">Carregando tarefas...</string>
    <string name="content_description_fab">Botão que adiciona tarefas</string>
    <!-- Validação -->
    <string name="account_not_registered_register_fragment">Nenhuma conta encontrada com este e-mail.</string>
    <string name="invalid_email_pass_register_fragment">Usuário / Senha inválida.</string>
    <string name="invalid_password_register_fragment">Usuário / Senha inválida.</string>
    <string name="email_in_use_register_fragment">Este e-mail já está em uso.</string>
    <string name="strong_password_register_fragment">A senha deve conter no mínimo 6 caracteres.</string>
    <string name="error_generic">Ocorreu um erro ao processar a sua solicitação.</string>
    <!-- Form TaskFragment -->
    <string name="text_title_form_task_fragment">Nova tarefa</string>
    <string name="text_task_form_task_fragment">Tarefa</string>
    <string name="hint_edt_description">Digite uma nova tarefa</string>
    <string name="text_status">Status</string>
    <string name="radio_button_todo">A fazer</string>
    <string name="radio_button_doing">Fazendo</string>
    <string name="radio_button_done">Feitas</string>
    <string name="btn_save_new_task">Salvar</string>
</resources>