<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.form.FormTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_background">

        <ImageView
            android:id="@+id/imgHead"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            android:src="@color/color_default"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/btnArrowLeft"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/btn_arrow_left_orange"
            app:layout_constraintBottom_toBottomOf="@+id/textTaskNewOrEdit"
            app:layout_constraintEnd_toStartOf="@+id/textTaskNewOrEdit"
            app:layout_constraintHorizontal_bias="0.255"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textTaskNewOrEdit"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textTaskNewOrEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/text_title_form_task_fragment"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_task_form_task_fragment"
            app:layout_constraintTop_toBottomOf="@+id/imgHead"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_edit_text"
            android:inputType="text"
            android:hint="@string/hint_edt_description"
            android:drawablePadding="8dp"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/textTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_status"
            app:layout_constraintTop_toBottomOf="@+id/edtDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <RadioButton
                android:id="@+id/rbToDo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_weight="1"
                android:text="@string/radio_button_todo" />

            <RadioButton
                android:id="@+id/rbDoing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_button_doing" />

            <RadioButton
                android:id="@+id/rbDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_button_done" />
        </RadioGroup>

        <com.denise.castro.task.customview.ProgressButton
            android:id="@+id/btnSaveNewTask"
            android:layout_width="300dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@id/radioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp"
            app:progress_button_title="@string/btn_save_new_task"
            app:progress_button_loading_title="@string/text_button_loading_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>